Update 'wzntj4b7v-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:6cae3a6df6de4c649f32175b754eee4baba6a93b@sha256:fa049c585a7ae368ef42a4a46cc82a8d120737240cb6579a6f25f7287a78c4ec

--- a/components/wzntj4b7v-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/wzntj4b7v-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wzntj4b7v-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:6cae3a6df6de4c649f32175b754eee4baba6a93b@sha256:fa049c585a7ae368ef42a4a46cc82a8d120737240cb6579a6f25f7287a78c4ec
+          name: container-image
